--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,14 +11,14 @@
     <string name="econgress">eCongress</string>
     <string name="mi">MI</string>
     <string name="firstname">First Name</string>
-    <string name="state">State</string>
+    <string name="state">* State</string>
     <string name="zip">* Zip</string>
-    <string name="zip4">+4</string>
+    <string name="zip4">* +4</string>
     <string name="telephone">Telephone</string>
-    <string name="city">City</string>
+    <string name="city">* City</string>
     <string name="testemail">Test Email</string>
     <string name="settings">Settings</string>
-    <string name="address">Address</string>
+    <string name="address">* Address</string>
     <string name="preference_file_key">com.mycompany.app.PREFERENCE_FILE_KEY</string>
     <string name="presidentemail">president@whitehouse.gov</string>
     <string name="presidentwebsite">https://www.whitehouse.gov</string>
@@ -62,4 +62,8 @@
     <string name="oauth_parse_error">Warning: Oauth Token Parse Error</string>
     <string name="oauth_token_not_acquired">Warning: Oauth Access Not Yet Acquired</string>
     <string name="account">Account:</string>
+    <string name="street_not_entered">Warning: Street Address Must be Entered to Continue!</string>
+    <string name="city_not_entered">Warning: City Must be Entered to Continue!</string>
+    <string name="state_not_entered">Warning: State Must be Entered to Continue!</string>
+    <string name="no_zip4_entered">Warning: Zip+4 Must be Entered to Continue!</string>
 </resources>
