--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="firstname">First Name</string>
     <string name="state">* State</string>
     <string name="zip">* Zip</string>
-    <string name="zip4">* +4</string>
+    <string name="zip4">+4</string>
     <string name="telephone">Telephone</string>
     <string name="city">* City</string>
     <string name="testemail">Test Email</string>
